# cage2_automation

./: .bumpversion.toml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  DEVELOPMENT.md  Dockerfile  Dockerfile_AWS  HISTORY.md  LICENSE  Makefile  README.md  TODOs.md  config  docker-compose.yml  full_install_script.py  open_tabs.bat  open_tabs.sh  pip_list.txt  pyproject.toml  requirements.txt  requirements_mip_cp.txt  requirements_servers.txt  settings.py  tasks.py
docs/: conf.py  index.rst  installation.rst  quickstart.md  usage.rst
lab_adaption/: __init__.py  config.py  platform_config.yaml  platform_config.yml  server_memory.py  slack_bot.py  start_orchestrator.sh  start_script.py  start_servers.py  worker_adaption.py
lab_adaption/device_wrappers/: __init__.py  bluewasher_wrapper.py  custom_wrapper1.py  custom_wrapper2.py  device_interface.py  echo_wrapper.py  generic_robot_arm_wrapper.py  greeter_wrapper.py  human.py  human_wrapper.py  labware_site.py  labware_transfer_wrapper.py  plate_sealer_wrapper.py  squid_wrapper.py  washer_dispenser_wrapper.py
lab_adaption/processes/: basic_process.py  big_echo_protocol.py  bluewasher_test.py  cell_painting_malin.py  cell_painting_spheroids.py  cytomat_test.py  echo5plates.py  empty_process.py  full_echo_protocol.py  greeter_test.py  human_test.py  interesting_example.py  lidding_test.py  mover_test.py  multiflow_test.py  show_process.py  two_source_four_dest_echo_protocol.csv  usual_process.py  washer_test.py
lab_adaption/processes/pythonlab_extensions/: echo_service_resource.py
lab_adaption/pythonlab_extensions/: my_special_service_resource.py
scripts/: add_lab_setup_to_db.py  full_install_and_start.sh  init_db.sh  install_all.sh  start_services.sh  update.sh
status_db/: settings.py
tests/: test_process_registration.py  test_startup_config_reader.py
